# py-oca-epak

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.opencode/skills/client-initialization/: SKILL.md
.opencode/skills/geographic/: SKILL.md
.opencode/skills/labels/: SKILL.md
.opencode/skills/shipments/: SKILL.md
.opencode/skills/tracking/: SKILL.md
ocaepak/: client.py
ocaepak/templates/: retiro.xml
tests/: test_client.py
tests/client/: conftest.py  test_caching.py  test_constants.py  test_core_operations.py  test_error_handling.py  test_geographic.py  test_initialization.py  test_labels.py  test_parsing.py  test_qr_codes.py  test_tracking.py
